--- a/composer.json
+++ b/composer.json
@@ -26,9 +26,17 @@
 		"container-interop/container-interop": "^1.1"
 	},
 
-	"require-dev": {
-			"satooshi/php-coveralls": "^1.0",
-			"phpunit/phpunit": "^5.2"
-	}
+    "require-dev": {
+        "php-coveralls/php-coveralls": "^2.0",
+        "phpunit/phpunit": "^5.7|^6.0|^7.0"
+    },
+    
+    "scripts": {
+          "phpunit": "phpunit --colors=auto",
+  
+          "test": [
+              "@phpunit"
+          ]
+    }
 
 }
